updated TG
